remove default outline fix images overlapping

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -116,6 +116,7 @@
     &:focus {
       color: $main-theme-color;
       border: solid 1px $main-theme-color;
+      outline: none;
     }
 
     &:hover::placeholder {
