--- a/src/styles/blocks/explore-online.scss
+++ b/src/styles/blocks/explore-online.scss
@@ -3,6 +3,8 @@
     @include page-grid;
 
     row-gap: 48px;
+    overflow: hidden;
+    position: relative;
   }
 
   &__title {
