--- a/src/styles/blocks/now-on-view.scss
+++ b/src/styles/blocks/now-on-view.scss
@@ -16,6 +16,9 @@
   &__images {
     @include page-grid;
 
+    overflow: hidden;
+    position: relative;
+
     &--triple {
       display: flex;
 
